<resources>
    <string name="app_name">TransferPay</string>
    <string name="ok">OK</string>
    <string name="pick_image_source">Pick image source</string>
    <string name="internet_connection_not_found">Please, turn ON your internet</string>
    <string name="production_type">Production</string>
    <string name="debug_type">Debug</string>
    <string name="two_factor_auth_title">Two Factor Authentication</string>
    <string name="two_factor_auth_verif_code_text">Enter the verification code send by SMS to your mobile</string>
    <string name="two_factor_auth_verify">Verify</string>
    <string name="two_factor_auth_resend_code">Re-send code</string>
    <string name="two_factor_auth_code_enter">Enter code</string>
    <string name="login_screen_title">Log-in</string>
    <string name="login_label_login">Login</string>
    <string name="login_invalid_access">Login or password are wrong</string>
    <string name="login_label_password">Password</string>
    <string name="login_link_forgot_password"><u>Forgot Password</u></string>
    <string name="login_link_sing_up"><u>Not yet registered? Sign-up Now</u></string>
    <string name="login_button_log_in">Log-in</string>
    <string name="menu_action_spa_settings">Settings</string>
    <string name="beneficiaries_screen_title">Beneficiaries</string>
    <string name="beneficiaries_message_currency">EUR 1 = USD 1,07</string>
    <string name="beneficiaries_button_add_beneficiary">+Beneficiary</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_history">History</string>
    <string name="menu_action_beneficiaries">Beneficiaries</string>
    <string name="menu_action_transactions_history">Transactions History</string>
    <string name="menu_action_wallet">Profit</string>
    <string name="menu_action_my_profile">My Profile</string>
    <string name="menu_action_terms_and_conditions">Terms and Conditions</string>
    <string name="menu_action_setting">Setting</string>
    <string name="menu_action_logout">Logout</string>
    <string name="menu_code_version">dev. Fetskovich</string>
    <string name="beneficiary_new_title">New Beneficiary</string>
    <string name="beneficiary_new_country">Beneficiary Country</string>
    <string name="beneficiary_new_full_name">Default Bank Name</string>
    <string name="beneficiary_new_bank">Beneficiary Bank</string>
    <string name="beneficiary_new_delivery_option">Delivery Option</string>
    <string name="beneficiary_new_choose_bank">Choose Bank</string>
    <string name="beneficiary_new_account_no">Account Number</string>
    <string name="beneficiary_new_card_number">Credit Card Number</string>
    <string name="beneficiary_new_details">Beneficiary Details</string>
    <string name="beneficiary_new_or">or</string>
    <string name="beneficiary_new_choose_country_in_settings">Choose country in settings</string>
    <string name="beneficiary_new_choose_bank_in_settings">Choose bank in settings</string>
    <string name="beneficiary_new_input_fields">Input all required fields</string>
    <string name="beneficiary_new_account_number">Input 11 symbols-number account</string>
    <string name="settings_screen_title">Settings</string>
    <string name="settings_default_title">Default</string>
    <string name="settings_label_branding_logo">Default Bank Logo</string>
    <string name="settings_label_default_country">Default country</string>
    <string name="settings_label_default_bank_id">Bank Number</string>
    <string name="settings_label_my_currency">My currency</string>
    <string name="settings_label_beneficiary_currency">Beneficiary currency</string>
    <string name="settings_label_exchange_rate">Exchange rate</string>
    <string name="settings_label_fee_min">Fee min</string>
    <string name="settings_label_fee_percentage">Fee %</string>
    <string name="settings_button_payment_option">Payment Options</string>
    <string name="settings_button_save">Save</string>
    <string name="settings_error_number">ErrorNumber</string>
    <string name="add_card_screen_title">Add Card Info</string>
    <string name="add_card_label_cardholder_name">Cardholder Name</string>
    <string name="add_card_label_card_number">Card Number</string>
    <string name="add_card_label_valid_thru">Valid thru</string>
    <string name="add_card_label_cvv">CVV</string>
    <string name="add_card_card_type">Card Type</string>
    <string name="add_card_label_button_save">Save</string>
    <string name="add_card_description_cvv">The last 3 digits on back of your card</string>
    <string name="registration_aml_button_back">Back</string>
    <string name="registration_aml_button_next">Next</string>
    <string name="registration_aml_new_user">New user</string>
    <string name="registration_validation_message">Please fill fields according to it rules</string>
    <string name="registration_aml_title_step_1">Step 1</string>
    <string name="registration_aml_label_country">* Country</string>
    <string name="registration_aml_label_email">* Email</string>
    <string name="registration_aml_label_login">* Login</string>
    <string name="registration_aml_label_password">* Password</string>
    <string name="registration_aml_label_confirm_Password">* Confirm Password</string>
    <string name="registration_aml_title_step_2">Step 2</string>
    <string name="registration_aml_label_first_name">* First Name</string>
    <string name="registration_aml_label_last_name">* Last Name</string>
    <string name="registration_aml_label_nationality">* Nationality</string>
    <string name="registration_aml_label_birth_date">* Birth Date</string>
    <string name="registration_aml_label_male">Male</string>
    <string name="registration_aml_label_female">Female</string>
    <string name="registration_aml_label_address_line_1">* Address Line 1</string>
    <string name="registration_aml_label_address_line_2">Address Line 2</string>
    <string name="registration_aml_label_address_city">* City</string>
    <string name="registration_aml_label_address_zip">* Zip/Post Code</string>
    <string name="registration_aml_label_address_state">State</string>
    <string name="registration_aml_label_mobile_number">* Mobile Number</string>
    <string name="registration_aml_label_identification_type">* Identification Type</string>
    <string name="registration_aml_label_id_details">* Identification Number</string>
    <string name="registration_aml_label_id_expiry">* Id Expiration Date</string>
    <string name="registration_aml_label_id_scan">Id Scan</string>
    <string name="registration_aml_button_disagree">Disagree</string>
    <string name="registration_aml_button_agree">Agree</string>
    <string name="registration_aml_message_confirm_registration">Please enter the confirmation \ncode sent to your Email</string>
    <string name="registration_aml_label_enter_code">Enter Code</string>
    <string name="registration_aml_button_confirm">Confirm</string>
    <string name="registration_aml_code_send_successfully">Code send to your email successfully.</string>
    <string name="registration_aml_code_send_failed">Code send failed. Probably check your internet connection.</string>
    <string name="registration_aml_wrong_send_code">You entered wrong email code</string>
    <string name="registration_aml_message_congratulation">Congratulations!\nYour account has been created.</string>
    <string name="registration_aml_message_pin_number">Your app pin is</string>
    <string name="registration_aml_message_how_to_change_pin">You can change this PIN from you Profile Screen.</string>
    <string name="registration_aml_pin_number">1234</string>
    <string name="registration_aml_two_factor_auth">2nd Factor Authentification</string>
    <string name="registration_aml_two_factor_auth_sms_wrong">Something went failed. Check your phone number</string>
    <string name="registration_aml_two_factor_auth_sms_ok">Sms has send successfully</string>
    <string name="registration_aml_two_factor_auth_sms_validation">Please, enter correct sms code</string>
    <string name="my_profile_title">My Profile</string>
    <string name="my_profile_title_personal_details">Personal Details</string>
    <string name="my_profile_title_contact_information">Contact Information</string>
    <string name="my_profile_title_id_information">Id Information</string>
    <string name="my_profile_label_email">Email</string>
    <string name="my_profile_label_birth_date">Birth Date</string>
    <string name="my_profile_label_gender">Gender</string>
    <string name="my_profile_label_address">Address</string>
    <string name="my_profile_label_mobile">Mobile</string>
    <string name="my_profile_label_id_type">Id type</string>
    <string name="my_profile_label_id_details">Id details</string>
    <string name="my_profile_label_id_expiry">Id expiry</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="my_profile_change_pin">CHANGE PIN</string>
    <string name="my_profile_change_password">CHANGE PASSWORD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="payment_option_add_credit_card">+Credit Card</string>
    <string name="transaction_history_title">Transaction History</string>
    <string name="transaction_history_payment_option">PAYMENT \nOPTION</string>
    <string name="transaction_history_verification_scenario">VERIFICATION \nSCENARIO</string>
    <string name="transaction_history_verification_status">VERIFICATION \nSTATUS</string>
    <string name="transaction_overview_pay_now">Pay Now</string>
    <string name="transaction_overview_title">Transaction Overview</string>
    <string name="transaction_overview_you_send">You Send</string>
    <string name="transaction_overview_they_receive">They Receive</string>
    <string name="transaction_overview_you_send_caps">YOU SEND</string>
    <string name="transaction_overview_currency_exchange_rate">CURRENCY EXCHANGE RATE</string>
    <string name="transaction_overview_exchange_amount">EXCHANGE AMOUNT</string>
    <string name="transaction_overview_transfer_fee">TRANSFER FEE</string>
    <string name="transaction_overview_estimated_amount_received">ESTIMATED AMOUNT\n RECEIVED</string>
    <string name="transaction_type_snake">SNAKE</string>
    <string name="transaction_type_piano">PIANO</string>
    <string name="transaction_type_gallery">GALLERY</string>
    <string name="validation_not_enough_money">Not enough money on your card!</string>
    <string name="validation_minimum_transaction">Min to send is 10 USD</string>
    <string name="validation_card_data">Add information about your card in card options</string>
    <string name="validation_operation_type">Please, select one of verification types</string>
    <string name="validation_zero_payment_options">Your payment options is empty.\nPlease go to your settings and add them.</string>
    <string name="currency_from">From: </string>
    <string name="currency_to"> to USD (1)</string>
    <string name="configure_currency">Please, configure your currency in payment settings.</string>
    <string name="change_password_title">Change password</string>
    <string name="change_password_successfuly">Password changed successfully</string>
    <string name="change_password_wrong">Passwords are not equals</string>
    <string name="change_password_empty">Password field is empty!</string>
    <string name="logo_title">Logo</string>
    <string name="logo_choosed_item">You selected new logo</string>
    <string name="profit_title">Profit</string>
    <string name="terms_screen_title">Terms and conditions</string>
    <string name="card_data_screen_title">Card Data</string>
    <string name="card_edit">Edit Card</string>
    <string name="country_belarus">Belarus</string>
    <string name="country_usa">USA</string>
</resources>