<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beneficiaries"
            android:icon="@drawable/ic_keyboard_arrow_right_24dp"
            android:title="@string/menu_action_beneficiaries" />
        <item
            android:id="@+id/nav_transaction_history"
            android:icon="@drawable/ic_keyboard_arrow_right_24dp"
            android:title="@string/menu_action_transactions_history" />
        <item
            android:id="@+id/transfer_fee_profit"
            android:icon="@drawable/ic_keyboard_arrow_right_24dp"
            android:title="@string/menu_action_wallet" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_keyboard_arrow_right_24dp"
            android:title="@string/menu_action_my_profile" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_keyboard_arrow_right_24dp"
            android:title="@string/menu_action_terms_and_conditions" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_keyboard_arrow_right_24dp"
            android:title="@string/menu_action_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_keyboard_arrow_right_24dp"
            android:title="@string/menu_action_logout" />
    </group>
</menu>
