<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="presenter"
            type="com.transfer.pay.ui.fragments.registration.stepsix.RegistrationStepSixPresenter"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:flexDirection="column"
            app:flexWrap="wrap">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/registration_aml_message_confirm_registration"
                app:layout_flexBasisPercent="30%" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fieldIdDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/enteredCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_aml_label_enter_code"
                    android:lines="1"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

        </com.google.android.flexbox.FlexboxLayout>

        <Button
            android:id="@+id/buttonVerify"
            style="@style/ButtonPrimary"
            android:onClick="@{()->presenter.onVerifyButtonClick()}"
            android:layout_above="@+id/reSendCode"
            android:layout_centerHorizontal="true"
            android:text="@string/two_factor_auth_verify" />

        <TextView
            android:id="@+id/reSendCode"
            style="@style/TextLink"
            android:onClick="@{()->presenter.onReSendButtonClick()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/two_factor_auth_resend_code" />

    </RelativeLayout>
</layout>