<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.transfer.pay.models.User" />

        <variable
            name="validationModel"
            type="com.transfer.pay.utils.validation.registration.RegistrationValidationModel"/>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fieldAddressLine1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_aml_label_first_name"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="@={user.firstName}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fieldAddressLine2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_aml_label_last_name"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="@={user.lastName}" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    style="@style/SpinnerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_aml_label_nationality" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerNationality"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:selectedValue="@={user.nationality}" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fieldState"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/user_date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_calendar"
                        android:hint="@string/registration_aml_label_birth_date"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="@={user.dateOfBirth}" />

                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:id="@+id/sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/title_margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/registration_aml_label_male" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/registration_aml_label_female" />

                </RadioGroup>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>