<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.transfer.pay.ui.activities.login.LoginPresenter" />

        <variable
            name="user"
            type="com.transfer.pay.models.User" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activityBackground"
        android:fitsSystemWindows="true"
        tools:context=".ui.fragments.beneficiaries.BeneficiariesFragment">

        <include layout="@layout/layout_spa_app_bar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fieldLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_top_margin">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_label_login"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@={user.login}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldLogin"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_label_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@={user.password}" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/TextLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldPassword"
                android:layout_centerHorizontal="true"
                android:onClick="@{presenter::onForgotPasswordClick}"
                android:text="@string/login_link_forgot_password" />

            <Button
                android:id="@+id/buttonLogIn"
                style="@style/ButtonPrimary"
                android:layout_above="@+id/linkSignUp"
                android:layout_centerHorizontal="true"
                android:onClick="@{presenter::onLoginButtonClick}"
                android:text="@string/login_button_log_in" />

            <TextView
                android:id="@+id/linkSignUp"
                style="@style/TextLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="@{presenter::onSignUpClick}"
                android:text="@string/login_link_sing_up" />

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>