<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="com.transfer.pay.ui.activities.twofactorauth.TwoFactorAuthPresenter" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activityBackground"
        android:fitsSystemWindows="true">

        <include layout="@layout/layout_spa_app_bar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/two_factor_auth_text"
                android:layout_width="@dimen/two_factor_auth_title_text"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/two_factor_auth_screen_top_margin"
                android:text="@string/registration_aml_message_confirm_registration"
                android:textAlignment="center" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/fieldLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/two_factor_auth_text"
                android:layout_marginTop="@dimen/two_factor_auth_screen_top_margin">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_aml_label_enter_code"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/buttonLogIn"
                style="@style/ButtonPrimary"
                android:layout_above="@+id/linkSignUp"
                android:layout_centerHorizontal="true"
                android:onClick="@{presenter::onVerifyButtonClick}"
                android:text="@string/two_factor_auth_verify" />

            <TextView
                android:id="@+id/linkSignUp"
                style="@style/TextLink"
                android:onClick="@{()->presenter.onResendClick()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/two_factor_auth_resend_code" />

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>


</layout>