<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.transfer.pay.models.User" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/registration_step_7_title_height"
                android:layout_marginTop="@dimen/registration_step_7_title_margin"
                android:gravity="center"
                android:text="@string/registration_aml_message_congratulation"
                android:textSize="@dimen/registration_step_7_pin_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/registration_step_7_pin_text_height"
                android:gravity="center"
                android:text="@string/registration_aml_message_pin_number"
                android:textSize="@dimen/registration_step_7_pin_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_pin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/registration_step_7_pin_height"
                android:gravity="center"
                android:text="@{user.applicationPin}"
                android:textColor="#0000FF"
                android:textSize="@dimen/registration_step_7_pin_size"
                tools:text="1234" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/title_margin"
                android:gravity="center"
                android:text="@string/registration_aml_message_how_to_change_pin"
                android:textSize="@dimen/registration_step_7_bottom_text" />

        </LinearLayout>


    </RelativeLayout>
</layout>