<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="presenter"
    type="com.transfer.pay.ui.fragments.changepassword.ChangePasswordPresenter"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_aml_label_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fieldPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_aml_label_confirm_Password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_alignParentBottom="true"
            style="@style/ButtonPrimary"
            android:onClick="@{()->presenter.onChangePasswordClick()}"
            android:text="@string/change_password_title"
            android:layout_width="match_parent"/>

    </RelativeLayout>
</layout>